Introduce POC or VaR over DuckDB