@@ -20,7 +20,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package eu.solven.adhoc.measure;
+package eu.solven.adhoc.measure.transformator;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -32,26 +32,31 @@ import org.junit.jupiter.api.Test;
 
 import eu.solven.adhoc.ADagTest;
 import eu.solven.adhoc.IAdhocTestConstants;
-import eu.solven.adhoc.measure.aggregation.comparable.MaxAggregation;
-import eu.solven.adhoc.measure.aggregation.comparable.MaxCombination;
-import eu.solven.adhoc.measure.model.Aggregator;
+import eu.solven.adhoc.column.AdhocColumnsManager;
+import eu.solven.adhoc.column.IAdhocColumnsManager;
+import eu.solven.adhoc.cube.AdhocCubeWrapper;
 import eu.solven.adhoc.measure.model.Combinator;
 import eu.solven.adhoc.measure.sum.SumCombination;
 import eu.solven.adhoc.query.AdhocQuery;
 import eu.solven.adhoc.storage.ITabularView;
 import eu.solven.adhoc.storage.MapBasedTabularView;
+import eu.solven.adhoc.table.InMemoryTable;
+import eu.solven.adhoc.table.transcoder.PrefixTranscoder;
 
-public class TestTransformator_Combinator_Long extends ADagTest implements IAdhocTestConstants {
-	@BeforeEach
+public class TestTransformator_Transcoding extends ADagTest implements IAdhocTestConstants {
+	InMemoryTable rows = InMemoryTable.builder().build();
+	IAdhocColumnsManager columnsManager =
+			AdhocColumnsManager.builder().transcoder(PrefixTranscoder.builder().prefix("p_").build()).build();
+	AdhocCubeWrapper aqw =
+			AdhocCubeWrapper.builder().table(rows).engine(aqe).measures(amb).columnsManager(columnsManager).build();
+
 	@Override
+	@BeforeEach
 	public void feedTable() {
-		rows.add(Map.of("k1", 123));
-		rows.add(Map.of("k2", 234));
-		rows.add(Map.of("k1", 345, "k2", 456));
-	}
+		// As assume the data in DB is already prefixed with `_p`
+		rows.add(Map.of("p_c", "v1", "p_k1", 123D));
+		rows.add(Map.of("p_c", "v2", "p_k2", 234D));
 
-	@Test
-	public void testSumOfSum() {
 		amb.addMeasure(Combinator.builder()
 				.name("sumK1K2")
 				.underlyings(Arrays.asList("k1", "k2"))
@@ -60,78 +65,51 @@ public class TestTransformator_Combinator_Long extends ADagTest implements IAdho
 
 		amb.addMeasure(k1Sum);
 		amb.addMeasure(k2Sum);
-
-		ITabularView output = aqw.execute(AdhocQuery.builder().measure("sumK1K2").build());
-
-		MapBasedTabularView mapBased = MapBasedTabularView.load(output);
-
-		Assertions.assertThat(mapBased.getCoordinatesToValues())
-				.hasSize(1)
-				.containsEntry(Collections.emptyMap(),
-						// "k1", 123 + 345, "k2", 234 + 456,
-						Map.of("sumK1K2", 0L + 123 + 234 + 345 + 456));
 	}
 
 	@Test
-	public void testTwiceSameMeasure() {
-		amb.addMeasure(Combinator.builder()
-				.name("sumK1K1")
-				.underlyings(Arrays.asList("k1", "k1"))
-				.combinationKey(SumCombination.KEY)
-				.build());
-
-		amb.addMeasure(k1Sum);
-
-		ITabularView output = aqw.execute(AdhocQuery.builder().measure("sumK1K1").build());
+	public void testGrandTotal() {
+		ITabularView output = aqw.execute(AdhocQuery.builder().measure("sumK1K2").debug(true).build());
 
 		MapBasedTabularView mapBased = MapBasedTabularView.load(output);
 
 		Assertions.assertThat(mapBased.getCoordinatesToValues())
 				.hasSize(1)
-				.containsEntry(Collections.emptyMap(), Map.of("sumK1K1", 0L + 123 + 345 + 123 + 345));
+				.containsEntry(Collections.emptyMap(), Map.of("sumK1K2", 0D + 123 + 234));
 	}
 
 	@Test
-	public void testSumOfMax() {
-		amb.addMeasure(Combinator.builder()
-				.name("sumK1K2")
-				.underlyings(Arrays.asList("k1", "k2"))
-				.combinationKey(SumCombination.KEY)
-				.build());
-
-		amb.addMeasure(Aggregator.builder().name("k1").aggregationKey(MaxAggregation.KEY).build());
-		amb.addMeasure(Aggregator.builder().name("k2").aggregationKey(MaxAggregation.KEY).build());
-
-		ITabularView output = aqw.execute(AdhocQuery.builder().measure("sumK1K2").build());
+	public void testFilter() {
+		ITabularView output = aqw.execute(AdhocQuery.builder().measure("sumK1K2").andFilter("c", "v1").build());
 
 		MapBasedTabularView mapBased = MapBasedTabularView.load(output);
 
 		Assertions.assertThat(mapBased.getCoordinatesToValues())
 				.hasSize(1)
-				.containsEntry(Collections.emptyMap(),
-						// "k1", 345, "k2", 456,
-						Map.of("sumK1K2", 0L + 345 + 456));
+				.containsEntry(Collections.emptyMap(), Map.of("sumK1K2", 0D + 123));
 	}
 
 	@Test
-	public void testMaxOfSum() {
-		amb.addMeasure(Combinator.builder()
-				.name("maxK1K2")
-				.underlyings(Arrays.asList("k1", "k2"))
-				.combinationKey(MaxCombination.KEY)
-				.build());
+	public void testGroupBy() {
+		ITabularView output = aqw.execute(AdhocQuery.builder().measure("sumK1K2").groupByAlso("c").build());
 
-		amb.addMeasure(k1Sum);
-		amb.addMeasure(k2Sum);
+		MapBasedTabularView mapBased = MapBasedTabularView.load(output);
 
-		ITabularView output = aqw.execute(AdhocQuery.builder().measure("maxK1K2").build());
+		Assertions.assertThat(mapBased.getCoordinatesToValues())
+				.hasSize(2)
+				.containsEntry(Map.of("c", "v1"), Map.of("sumK1K2", 0D + 123))
+				.containsEntry(Map.of("c", "v2"), Map.of("sumK1K2", 0D + 234));
+	}
+
+	@Test
+	public void testFilterGroupBy() {
+		ITabularView output = aqw.execute(
+				AdhocQuery.builder().measure("sumK1K2").andFilter("c", "v1").groupByAlso("c").debug(true).build());
 
 		MapBasedTabularView mapBased = MapBasedTabularView.load(output);
 
 		Assertions.assertThat(mapBased.getCoordinatesToValues())
 				.hasSize(1)
-				.containsEntry(Collections.emptyMap(),
-						// "k1", 123 + 345, "k2", 234 + 456,
-						Map.of("maxK1K2", 0L + 234 + 456));
+				.containsEntry(Map.of("c", "v1"), Map.of("sumK1K2", 0D + 123));
 	}
 }
